--- a/slides.html
+++ b/slides.html
@@ -414,7 +414,7 @@
 <h2>Schéma</h2>
 
 <img data-src="mermaid_schema4.png" width="300" class="r-stretch"></section>
-<section id="webscraping" class="slide level2">
+<section id="webscraping" class="slide level2" data-background-image="scrapingcuisine.jpeg" data-background-opacity="0.2">
 <h2>Webscraping 🕸️</h2>
 <ul>
 <li class="fragment"><p>Données récupérées depuis : <strong>CuisineAZ</strong>.</p></li>
