commit final final

--- a/slides.html
+++ b/slides.html
@@ -429,8 +429,8 @@
 </section>
 <section id="schéma-1" class="slide level2">
 <h2>Schéma</h2>
-<p><img data-src="imgs/magnifik.jpg">{width= 80%}</p>
-<aside class="notes">
+
+<img data-src="imgs/magnifik.jpg" style="width:90.0%" class="r-stretch"><aside class="notes">
 <p><em>Gui²</em></p>
 <p><em>Buk</em></p>
 <p><em>Gui²</em></p>
@@ -618,8 +618,8 @@
 </blockquote>
 <ul>
 <li class="fragment"><p><strong>Solution</strong> : Convertir le tableau <code>gt</code> en <code>reactable</code>.</p></li>
-<li class="fragment"><p>Problème dû à la conversion : Certaines features de <code>gt</code> se perdent lors de la conversion (exemple les drapeaux, le titre, …)</p></li>
 <li class="fragment"><p><strong>Notre utilisation</strong> : Permet à l’utilisateur de sélectionner une recette dans le tableau des recettes pour la visualiser dans l’onglet Détail Recette.</p></li>
+<li class="fragment"><p>Problème dû à la conversion : Certaines features de <code>gt</code> se perdent lors de la conversion (exemple les drapeaux, le titre, …)</p></li>
 </ul>
 <aside class="notes">
 <p><em>Gui²</em></p>
@@ -663,6 +663,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section>
+<section id="section" class="slide level2" data-background-image="imgs/naans.jpg" data-background-opacity="0.5">
+<h2></h2>
 <div class="quarto-auto-generated-content">
 <p><img src="https://corentinducloux.fr/dossier_img/mecen_transparent.png" class="slide-logo"></p>
 <div class="footer footer-default">
